Upgrade GH runner to ubuntu-latest.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ubuntu_build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       CC: clang
     steps:
@@ -20,5 +20,3 @@ jobs:
       run: |
         bazelisk test //...
         bazelisk run //:bzlformat_missing_pkgs_test
-
-
